@@ -44,7 +44,7 @@ WriteMakefile1(
         'Test::More'      => 0,
         'Test::Exception' => 0,
         'Test::Deep' => 0,
-        'Test::NoWarnings' => 0,
+        'Test::FailWarnings' => 0,
         'Time::HiRes' => 0,
         'File::Temp' => 0,
         'File::Slurp' => 0,
