@@ -4,9 +4,9 @@ use strict;
 use warnings;
 
 use Test::More;
-use Test::NoWarnings;
+use Test::FailWarnings;
 
-plan tests => 1 + 1;
+plan tests => 1;
 
 use Net::WebSocket::Constants ();
 
