@@ -8,9 +8,9 @@ BEGIN {
 }
 
 use Test::More;
-use Test::NoWarnings;
+use Test::FailWarnings;
 
-plan tests => 1 + 4;
+plan tests => 4;
 
 use FindBin;
 use IO::Framed::Read;
