@@ -1,9 +1,9 @@
 #!/usr/bin/env perl
 
 use Test::More;
-use Test::NoWarnings;
+use Test::FailWarnings;
 
-plan tests => 1 + 4;
+plan tests => 4;
 
 use Net::WebSocket::Message ();
 use Net::WebSocket::PMCE::deflate ();
